--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
+    <title>Fabien COMTE - Développeur Big Data Freelance</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -25,17 +27,19 @@
             <div class="card me-card top-card text-center">
                 <img class="card-img-top me-img" src="img/me.png" alt="Fabien COMTE">
                 <div class="card-body">
-                    <h1 class="card-title">Fabien COMTE</h1>
+                    <h1 class="card-title">Fabien COMTE - Freelance</h1>
                     <h1 class="card-text">Développeur Backend Big Data et Cloud</h1>
-                    <div class="row cv">
-                        <div class="col">
-                            <a href="doc/CV%20Fabien%20COMTE.docx" class="btn btn-primary btn-lg"><i class="fa fa-2x fa-file-word-o"
-                                                                   aria-hidden="true"></i> CV au
+                    <div class="row">
+                        <div class="col cv">
+                            <a href="doc/CV%20Fabien%20COMTE.docx" class="btn btn-primary btn-lg"><i
+                                    class="fa fa-2x fa-file-word-o"
+                                    aria-hidden="true"></i> CV au
                                 format Word</a>
                         </div>
-                        <div class="col">
-                            <a href="doc/CV%20Fabien%20COMTE.pdf" class="btn btn-primary btn-lg"><i class="fa fa-2x fa-file-pdf-o"
-                                                                   aria-hidden="true"></i> CV au
+                        <div class="col cv">
+                            <a href="doc/CV%20Fabien%20COMTE.pdf" class="btn btn-primary btn-lg"><i
+                                    class="fa fa-2x fa-file-pdf-o"
+                                    aria-hidden="true"></i> CV au
                                 format PDF</a>
                         </div>
                     </div>
@@ -44,57 +48,42 @@
         </div>
         <div class="col text-center">
             <div class="card me-card top-card text-center">
-                <div class="card-body">
-                    <h4>Langages</h4>
-                    <div class="progress bar">
-                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%"
-                             aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">Java
+                <div class="card-body h-100">
+                    <div class="row h-50">
+                        <div class="col">
+                            <h2>Langages</h2>
+                            <ul class="skill-list">
+                                <li>Java</li>
+                                <li>Scala</li>
+                                <li>Python</li>
+                                <li>Javascript</li>
+                            </ul>
+                        </div>
+                        <div class="col">
+                            <h2>Big Data</h2>
+                            <ul class="skill-list">
+                                <li>Spark</li>
+                                <li>Hadoop</li>
+                                <li>Hive</li>
+                                <li>NoSQL</li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="progress bar">
-                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%"
-                             aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">Scala
+                    <div class="row h-50">
+                        <div class="col">
+                            <h2>Cloud</h2>
+                            <ul class="skill-list">
+                                <li>Amazon Web Services</li>
+                                <li>Openstack</li>
+                            </ul>
                         </div>
-                    </div>
-                    <div class="progress bar">
-                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 30%"
-                             aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">Python
-                        </div>
-                    </div>
-
-                    <h4>Big Data</h4>
-                    <div class="progress bar">
-                        <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
-                             aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">Hadoop
-                        </div>
-                    </div>
-                    <div class="progress bar">
-                        <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
-                             aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">Spark
-                        </div>
-                    </div>
-
-                    <h4>Cloud</h4>
-                    <div class="progress bar">
-                        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%"
-                             aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">Amazon Web Services
-                        </div>
-                    </div>
-                    <div class="progress bar">
-                        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 30%"
-                             aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">Openstack
-                        </div>
-                    </div>
-
-                    <h4>Techniques</h4>
-                    <div class="progress bar">
-                        <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 100%"
-                             aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">Intégration/déploiement continu
-                        </div>
-                    </div>
-                    <div class="progress bar">
-                        <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 30%"
-                             aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">Devops
+                        <div class="col">
+                            <h2>Techniques</h2>
+                            <ul class="skill-list">
+                                <li>Intégration continue</li>
+                                <li>Déploiement continu</li>
+                                <li>Tests automatisés</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -112,7 +101,7 @@
                             <a class="btn btn-primary btn-lg" href="http://2016.rivieradev.fr/session/66">Conférence
                                 Riviera Dev 2016</a>
                         </div>
-                        <div class="col github">
+                        <div class="col button-link">
                             <a class="btn btn-primary btn-lg" href="https://github.com/comtef">
                                 <i class="fa fa-2x fa-github" aria-hidden="true"></i>
                                 <p>Open Source</p>
@@ -127,13 +116,19 @@
                 <div class="card-body">
                     <h2 class="card-title">Contact</h2>
                     <div class="row">
-                        <div class="col github">
+                        <div class="col button-link">
                             <a class="btn btn-primary btn-lg" href="mailto:comtef@gmail.com">
                                 <i class="fa fa-2x fa-envelope-o" aria-hidden="true"></i>
                                 <p>comtef@gmail.com</p>
                             </a>
                         </div>
-                        <div class="col github">
+                        <div class="col button-link">
+                            <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/fabien-comte-6524b730/">
+                                <i class="fa fa-2x fa-linkedin-square" aria-hidden="true"></i>
+                                <p>Profil Linkedin</p>
+                            </a>
+                        </div>
+                        <div class="col button-link">
                             <a class="btn btn-primary btn-lg" href="tel:0643358322">
                                 <i class="fa fa-2x fa-mobile" aria-hidden="true"></i>
                                 <p>06 43 35 83 22</p>
@@ -146,16 +141,20 @@
     </div>
 </div>
 
-<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-61031085-1"></script>
 <script>
-    window.ga = function () {
-        ga.q.push(arguments)
-    };
-    ga.q = [];
-    ga.l = +new Date;
-    ga('create', 'UA-61031085-1', 'auto');
-    ga('send', 'pageview')
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'UA-61031085-1');
 </script>
+
 <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 </html>
