Updated skills and layout

--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
 <!-- End Google Tag Manager (noscript) -->
 <div class="container-fluid">
     <div class="row top-row">
-        <div class="col">
+        <div class="col-12 col-lg-6">
             <div class="card me-card top-card text-center">
                 <img class="card-img-top me-img" src="img/me.png" alt="Fabien COMTE">
                 <div class="card-body">
                     <h1 class="card-title">Fabien COMTE - Freelance</h1>
                     <h1 class="card-text">Développeur Backend Big Data et Cloud</h1>
                     <div class="row">
-                        <div class="col cv">
+                        <div class="col-12 col-xl-6 cv">
                             <a href="doc/CV%20Fabien%20COMTE.docx" class="btn btn-primary btn-lg"><i
                                     class="fa fa-2x fa-file-word-o"
                                     aria-hidden="true"></i> CV au
                                 format Word</a>
                         </div>
-                        <div class="col cv">
+                        <div class="col-12 col-xl-6 cv">
                             <a href="doc/CV%20Fabien%20COMTE.pdf" class="btn btn-primary btn-lg"><i
                                     class="fa fa-2x fa-file-pdf-o"
                                     aria-hidden="true"></i> CV au
@@ -66,11 +66,11 @@
                 </div>
             </div>
         </div>
-        <div class="col text-center">
+        <div class="col-12 col-lg-6 text-center">
             <div class="card me-card top-card text-center">
                 <div class="card-body h-100">
-                    <div class="row h-50">
-                        <div class="col">
+                    <div class="row top-row">
+                        <div class="col-12 col-lg-6">
                             <h2>Langages</h2>
                             <ul class="skill-list">
                                 <li>Java</li>
@@ -79,7 +79,7 @@
                                 <li>Javascript</li>
                             </ul>
                         </div>
-                        <div class="col">
+                        <div class="col-12 col-lg-6">
                             <h2>Big Data</h2>
                             <ul class="skill-list">
                                 <li>Spark</li>
@@ -89,17 +89,18 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="row h-50">
-                        <div class="col">
+                    <div class="row">
+                        <div class="col-12 col-lg-6">
                             <h2>Cloud</h2>
                             <ul class="skill-list">
                                 <li>Amazon Web Services</li>
                                 <li>Openstack</li>
                             </ul>
                         </div>
-                        <div class="col">
+                        <div class="col-12 col-lg-6">
                             <h2>Techniques</h2>
                             <ul class="skill-list">
+                                <li>Machine Learning</li>
                                 <li>Intégration continue</li>
                                 <li>Déploiement continu</li>
                                 <li>Tests automatisés</li>
@@ -111,17 +112,17 @@
         </div>
     </div>
     <div class="row">
-        <div class="col text-center">
+        <div class="col-12 col-lg-6 text-center">
             <div class="card me-card text-center">
                 <div class="card-body">
                     <h2 class="card-title">Références</h2>
                     <div class="row">
-                        <div class="col">
-                            <img src="img/logo_riviera.svg" class="logo-riviera"/>
+                        <div class="col-12 col-xl-6">
+                            <img src="img/logo_riviera.svg" class="logo-riviera" alt="Riviera Dev"/>
                             <a class="btn btn-primary btn-lg" href="http://2016.rivieradev.fr/session/66">Conférence
                                 Riviera Dev 2016</a>
                         </div>
-                        <div class="col button-link">
+                        <div class="col-12 col-xl-6 button-link">
                             <a class="btn btn-primary btn-lg" href="https://github.com/comtef">
                                 <i class="fa fa-2x fa-github" aria-hidden="true"></i>
                                 <p>Open Source</p>
@@ -131,24 +132,24 @@
                 </div>
             </div>
         </div>
-        <div class="col text-center">
+        <div class="col-12 col-lg-6 text-center">
             <div class="card me-card text-center">
                 <div class="card-body">
                     <h2 class="card-title">Contact</h2>
                     <div class="row">
-                        <div class="col button-link">
+                        <div class="col-12 col-xl-4 button-link">
                             <a class="btn btn-primary btn-lg" href="mailto:comtef@gmail.com">
                                 <i class="fa fa-2x fa-envelope-o" aria-hidden="true"></i>
                                 <p>comtef@gmail.com</p>
                             </a>
                         </div>
-                        <div class="col button-link">
+                        <div class="col-12 col-xl-4 button-link">
                             <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/fabien-comte-6524b730/">
                                 <i class="fa fa-2x fa-linkedin-square" aria-hidden="true"></i>
                                 <p>Profil Linkedin</p>
                             </a>
                         </div>
-                        <div class="col button-link">
+                        <div class="col-12 col-xl-4 button-link">
                             <a class="btn btn-primary btn-lg" href="tel:0643358322">
                                 <i class="fa fa-2x fa-mobile" aria-hidden="true"></i>
                                 <p>06 43 35 83 22</p>
